--- a/style/index.css
+++ b/style/index.css
@@ -42,3 +42,6 @@
 .email {
     background: url('../imgs/user-128.svg') no-repeat;
 }
+.password {
+    background: url('../imgs/key-53.svg') no-repeat;
+}
